compilateurDeca/src/test/deca/context/invalid/objet/comparaison/int_instanceof_objet.deca
// Description:
//    Test de contexte : instanceof sur un entier.
//
// Resultats:
//    Erreur contextuelle
//
// Historique:
//    cree le 13/01/2026

{
    int x = 0;
    boolean b = x instanceof Object;
}